assets/style.css
* {
    box-sizing: border-box;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    text-align: center;
}

main {
    margin-top: 100px;
}

#examples {
    margin-top: 40px;
}

#studienplan {
    width: fit-content;
    margin-right: auto;
    margin-left: auto;
}

.semester {
    display: flex;
    padding: 7px;
}

.module {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 145px;
    height: 80px;
    margin: 5px;
    padding: 5px;
    border-radius: 6px;
    cursor: pointer;
    color: white;
    user-select: none;
}

#semesterCounter {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 90px;
    height: 80px;
    margin: 5px;
    padding: 5px;
    border-radius: 6px;
    cursor: pointer;
    color: black;
    font-size: 300%;
}

.module div {
    width: 100%;
    word-wrap: break-word;
}

.title {
    text-align: left;
    display: flex;
    justify-content: center;
    align-items: center;
    color: grey;
}

.title hr {
    width: 88%;
}

.spacer {
    cursor: auto;
}

#buttonBar button {
    border-radius: 5px;
    margin: 50px 20px 0;
    background-color: blue;
    color: white;
    border-width: 0;
    padding: 10px;
    font-weight: bold;
}

#buttonBar button:active {
    background-color: darkblue;
}

#controls {
    height: 90px;
    line-height: 90px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 50px;
}

#controls img {
    max-height: 80px;
}

#controls div.module {
    margin: 0 30px;
}

